syntax = "proto3";

option csharp_namespace = "WowApp.Grpc.Main";

package UserEntity;

message User {
  int32 user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message HalfUser {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

