syntax = "proto3";

option csharp_namespace = "WowApp.Grpc.Main";

import "UserEntity.proto";

message GetUserRequest {
  int32 user_id = 1;
}

message GetUserResponse {
  UserEntity.User user = 1;
}

message CreateUserRequest {
  UserEntity.HalfUser user = 1;
}

message CreateUserResponse {
  UserEntity.User user = 1;
}

message UpdateUserRequest {
  UserEntity.User user = 1;
}

message UpdateUserResponse {
  UserEntity.User user = 1;
}

message DeleteUserRequest {
  int32 user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
  repeated UserEntity.User users = 1;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
}
